refactor: 포인트 컨트롤러 중복 테스트 통합 및 리팩토링